# swagger.yaml
@@ -580,6 +580,47 @@ paths:
           description: Not authenticated
         "403":
           description: Not authorized
+     
+  /book/search:
+    post:
+      tags:
+        - Book
+      summary: Search books by a string
+      description: Search books
+      parameters:
+        - in: body
+          name: body
+          schema:
+            type: object
+            properties:
+              value:
+                type: string
+                description: String to search
+              limit:
+                type: integer
+                description: The maximum books to retrieve
+                default: 24
+              frame:
+                type: integer
+                description: The page or frame to retrieve
+                default: 1
+      responses:
+        "200":
+          description: Oke
+          schema:
+            type: object
+            properties:
+              status:
+                type: boolean
+              message:
+                type: string
+                example: Search OK     
+              data:
+                type: array
+                items:
+                  $ref: "#definitions/BookInfo"
+        "400":
+          description: Search failed
                 
   # Category
   /category:
